--- a/GeoNode/res/layout/fragment_main.xml
+++ b/GeoNode/res/layout/fragment_main.xml
@@ -1,3 +1,9 @@
+<!--
+	LinearLayout goes linearly down the layout objects in this list.
+	The order they are placed in this file is the order they appear on the screen.
+	
+	match_parent makes this viewgroup (LinearLayout) fill the full screen
+-->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
