--- a/GeoNode/res/layout/activity_main.xml
+++ b/GeoNode/res/layout/activity_main.xml
@@ -3,6 +3,6 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.leepresswood.geonode.MainActivity"
+    tools:context="com.leepresswood.geonode.activities.MainActivity"
     tools:ignore="MergeRootFrame" />
 
