--- a/GeoNode/app/src/main/res/layout/activity_map.xml
+++ b/GeoNode/app/src/main/res/layout/activity_map.xml
@@ -1,7 +1,10 @@
-<fragment xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:id="@+id/map"
     tools:context="com.leepresswood.geonode.activities.MapActivity"
-    android:name="com.google.android.gms.maps.SupportMapFragment"/>
+    android:name="com.google.android.gms.maps.SupportMapFragment">
+
+ </LinearLayout>
