--- a/GeoNode/app/src/main/res/layout/activity_map.xml
+++ b/GeoNode/app/src/main/res/layout/activity_map.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:id="@+id/map"
+    android:id="@+id/containerMap"
     tools:context="com.leepresswood.geonode.activities.MapActivity"
     android:name="com.google.android.gms.maps.SupportMapFragment">
 
