--- a/GeoNode/app/src/main/res/layout/activity_login.xml
+++ b/GeoNode/app/src/main/res/layout/activity_login.xml
@@ -43,6 +43,7 @@
         <EditText android:id="@+id/textfield_password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:inputType="textPassword"
             android:hint="@string/textfield_password" />
         <!--
             The onclick searches for the function "sendMessage" in the activity that openedthis fragment
