--- a/GeoNode/app/src/main/res/layout/activity_login.xml
+++ b/GeoNode/app/src/main/res/layout/activity_login.xml
@@ -1,9 +1,3 @@
-<!--
-	LinearLayout goes linearly down the layout objects in this list.
-	The order they are placed in this file is the order they appear on the screen.
-
-	match_parent makes this viewgroup (LinearLayout) fill the full screen
--->
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/containerLogin"
@@ -27,51 +21,43 @@
         android:orientation="vertical"
         android:gravity="center_vertical"
         android:weightSum="1">
-
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="@string/login_instructions"
             android:id="@+id/loginInstructionsView"/>
-
         <Space
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="0.07"
+            android:layout_weight="0.03"
             android:id="@+id/space0"/>
-
         <EditText android:id="@+id/textfield_username"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/textfield_username"
-            />
-
+            android:hint="@string/textfield_username"/>
         <Space
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="0.07"
+            android:layout_weight="0.03"
             android:id="@+id/space"/>
-
         <EditText android:id="@+id/textfield_password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textPassword"
             android:hint="@string/textfield_password" />
-
         <Space
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="0.07"
+            android:layout_weight="0.03"
             android:id="@+id/space2"/>
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <Button
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.465"
+                android:layout_weight="0.9"
                 android:text="@string/button_submit"
                 android:onClick="login"
                 android:singleLine="false"
@@ -84,13 +70,13 @@
             <Space
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.07"
+                android:layout_weight="0.03"
                 android:id="@+id/space3"/>
 
             <Button
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.465"
+                android:layout_weight="0.9"
                 android:text="@string/button_register"
                 android:onClick="register"
                 android:background="#ff1bc1e1"
@@ -102,7 +88,7 @@
         <Space
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="0.07"
+            android:layout_weight="0.03"
             android:id="@+id/space4"/>
 
         <Button
