More layout modularization

--- a/GeoNode/app/src/main/res/layout/activity_login.xml
+++ b/GeoNode/app/src/main/res/layout/activity_login.xml
@@ -60,45 +60,31 @@
                 android:layout_weight="0.9"
                 android:text="@string/button_submit"
                 android:onClick="login"
-                android:singleLine="false"
-                android:background="@string/color_button_background"
-                android:textColor="@string/color_button_text"
-                android:textSize="17pt"
-                android:typeface="sans"
+					 style="@style/ButtonStyle"
                 android:textStyle="bold"/>
-
             <Space
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="0.03"
                 android:id="@+id/space3"/>
-
             <Button
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="0.9"
                 android:text="@string/button_register"
                 android:onClick="register"
-                android:background="@string/color_button_background"
-                android:textSize="17pt"
-                android:textColor="@string/color_button_text"
-                android:textStyle="bold"/>
+					 style="@style/ButtonStyle"/>
         </LinearLayout>
-
         <Space
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="0.03"
             android:id="@+id/space4"/>
-
         <Button
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:text="@string/debug_enter"
             android:onClick="loginWithoutLogin"
-            android:background="@string/color_button_background"
-            android:textSize="17pt"
-            android:textColor="@string/color_button_text"
-            android:textStyle="bold"/>
+				style="@style/ButtonStyle"/>
     </LinearLayout>
 </RelativeLayout>
