--- a/GeoNode/app/src/main/res/values/styles.xml
+++ b/GeoNode/app/src/main/res/values/styles.xml
@@ -1,8 +1,13 @@
 <resources>
 
-    <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
-    </style>
-
+	<!-- Base application theme. -->
+	<style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+		<!-- Customize your theme here. -->
+	</style>
+	<style name="ButtonStyle">
+		<item name="android:background">#ff1bc1e1</item>
+		<item name="android:textSize">17pt</item>
+		<item name="android:textColor">#ffffff</item>
+		<item name="android:textStyle">bold</item>
+	</style>
 </resources>
