--- a/GeoNode/app/src/main/res/layout/activity_login.xml
+++ b/GeoNode/app/src/main/res/layout/activity_login.xml
@@ -1,90 +1,68 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/containerLogin"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context="com.leepresswood.geonode.activities.MainActivity"
-    tools:ignore="MergeRootFrame">
-
-    <!--
-        Weight works like this:
-        Each line has a default of 0.
-        Take the sum of all the weights of the line. That's the denominator.
-        Weight / Denominator shows what percentage of the line is taken up by that object.
-
-        android:layout_weight="1"
-    -->
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:gravity="center_vertical"
-        android:weightSum="1">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="@string/login_instructions"
-            android:id="@+id/loginInstructionsView"/>
-        <Space
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.03"
-            android:id="@+id/space0"/>
-        <EditText android:id="@+id/textfield_username"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/textfield_username"/>
-        <Space
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.03"
-            android:id="@+id/space"/>
-        <EditText android:id="@+id/textfield_password"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="textPassword"
-            android:hint="@string/textfield_password" />
-        <Space
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.03"
-            android:id="@+id/space2"/>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <Button
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.9"
-                android:text="@string/button_submit"
-                android:onClick="login"
-					 style="@style/ButtonStyle"
-                android:textStyle="bold"/>
-            <Space
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.03"
-                android:id="@+id/space3"/>
-            <Button
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.9"
-                android:text="@string/button_register"
-                android:onClick="register"
-					 style="@style/ButtonStyle"/>
-        </LinearLayout>
-        <Space
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.03"
-            android:id="@+id/space4"/>
-        <Button
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/debug_enter"
-            android:onClick="loginWithoutLogin"
-				style="@style/ButtonStyle"/>
-    </LinearLayout>
-</RelativeLayout>
+<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
+	 xmlns:tools="http://schemas.android.com/tools"
+	 android:id="@+id/containerLogin"
+	 android:layout_width="fill_parent"
+	 android:layout_height="fill_parent"
+	 android:layout_alignParentBottom="true"
+	 android:layout_centerHorizontal="true"
+	 tools:context="com.leepresswood.geonode.activities.MainActivity"
+	 tools:ignore="MergeRootFrame">
+	<TableRow>
+		<TextView
+			 android:layout_width="wrap_content"
+			 android:layout_height="wrap_content"
+			 android:textAppearance="?android:attr/textAppearanceLarge"
+			 android:text="@string/login_instructions"
+			 android:id="@+id/loginInstructionsView"/>
+	</TableRow>
+	<TableRow>
+		<EditText android:id="@+id/textfield_username"
+					 android:layout_width="match_parent"
+					 android:layout_height="wrap_content"
+					 android:hint="@string/textfield_username"
+					 android:layout_span="3"/>
+	</TableRow>
+	<TableRow>
+		<EditText android:id="@+id/textfield_password"
+					 android:layout_width="match_parent"
+					 android:layout_height="wrap_content"
+					 android:inputType="textPassword"
+					 android:hint="@string/textfield_password"/>
+	</TableRow>
+	<TableRow>
+		<Button
+		 android:layout_width="0dp"
+		 android:layout_height="wrap_content"
+		 android:layout_weight="0.9"
+		 android:text="@string/button_submit"
+		 android:onClick="login"
+		 style="@style/ButtonStyle"
+		 android:textStyle="bold"/>
+		<Space
+			 android:layout_width="0dp"
+			 android:layout_height="wrap_content"
+			 android:layout_weight="0.03"
+			 android:id="@+id/space3"/>
+		<Button
+			 android:layout_width="0dp"
+			 android:layout_height="wrap_content"
+			 android:layout_weight="0.9"
+			 android:text="@string/button_register"
+			 android:onClick="register"
+			 style="@style/ButtonStyle"/>
+	</TableRow>
+	<Space
+		 android:layout_width="match_parent"
+		android:layout_height="0dp"
+		android:layout_weight="0.03"
+		android:id="@+id/space4"/>
+	<TableRow>
+		<Button
+			 android:layout_width="wrap_content"
+			 android:layout_height="wrap_content"
+			 android:text="@string/debug_enter"
+			 android:onClick="loginWithoutLogin"
+			 style="@style/ButtonStyle"
+			 android:layout_span="3"/>
+	</TableRow>
+</TableLayout>
