Imported logic from login

--- a/GeoNode/app/src/main/res/layout/activity_register.xml
+++ b/GeoNode/app/src/main/res/layout/activity_register.xml
@@ -34,7 +34,7 @@
 			android:layout_width="fill_parent"
 			android:layout_height="wrap_content"
 			android:text="@string/button_submit"
-			android:onClick="loginWithoutLogin"
+			android:onClick="register"
 			style="@style/ButtonStyle"/>
 	</LinearLayout>
 </RelativeLayout>
