--- a/GeoNode/app/src/main/res/layout/activity_maps.xml
+++ b/GeoNode/app/src/main/res/layout/activity_maps.xml
@@ -1,15 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-	xmlns:android="http://schemas.android.com/apk/res/android"
-	xmlns:tools="http://schemas.android.com/tools"
+<fragment xmlns:android="http://schemas.android.com/apk/res/android"
+	android:id="@+id/map"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
-	tools:context=".activities.MapsActivity">
-	<fragment
+	android:name="com.google.android.gms.maps.MapFragment"/>
+
+	 <!--<?xml version="1.0" encoding="utf-8"?>
+	<LinearLayout
+		xmlns:android="http://schemas.android.com/apk/res/android"
+		xmlns:tools="http://schemas.android.com/tools"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
-		android:id="@+id/map"
-		android:name="com.google.android.gms.maps.SupportMapFragment"
-		tools:layout="@layout/abc_search_view"/>
-</LinearLayout>
-
+		tools:context=".activities.MapsActivity">
+		<fragment
+			android:layout_width="match_parent"
+			android:layout_height="match_parent"
+			android:id="@+id/map"
+			android:name="com.google.android.gms.maps.SupportMapFragment"
+			tools:layout="@layout/abc_search_view"/>
+	</LinearLayout>-->
