--- a/GeoNode/app/src/main/res/layout/activity_maps.xml
+++ b/GeoNode/app/src/main/res/layout/activity_maps.xml
@@ -1,21 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<fragment xmlns:android="http://schemas.android.com/apk/res/android"
-	android:id="@+id/map"
-	android:layout_width="match_parent"
-	android:layout_height="match_parent"
-	android:name="com.google.android.gms.maps.MapFragment"/>
-
-	 <!--<?xml version="1.0" encoding="utf-8"?>
-	<LinearLayout
-		xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+	xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:tools="http://schemas.android.com/tools"
+	android:layout_width="fill_parent"
+	android:layout_height="fill_parent"
+	android:orientation="vertical"
+	tools:context=".activities.MapsActivity">
+	<fragment xmlns:android="http://schemas.android.com/apk/res/android"
 		xmlns:tools="http://schemas.android.com/tools"
+		android:id="@+id/map"
 		android:layout_width="match_parent"
-		android:layout_height="match_parent"
-		tools:context=".activities.MapsActivity">
-		<fragment
-			android:layout_width="match_parent"
-			android:layout_height="match_parent"
-			android:id="@+id/map"
-			android:name="com.google.android.gms.maps.SupportMapFragment"
-			tools:layout="@layout/abc_search_view"/>
-	</LinearLayout>-->
+		android:layout_height="0dp"
+		android:layout_weight="0.9"
+		android:name="com.google.android.gms.maps.MapFragment"
+		tools:layout="@layout/abc_search_view"/>
+	<Button
+		 android:layout_width="match_parent"
+		 android:layout_height="0dp"
+		 android:layout_weight="0.1"
+		 android:text="New Button"
+		 style="@style/ButtonStyle"
+		 android:id="@+id/button"
+		 android:layout_gravity="bottom"/>
+</LinearLayout>
