--- a/GeoNode/app/src/main/res/layout/activity_maps.xml
+++ b/GeoNode/app/src/main/res/layout/activity_maps.xml
@@ -6,19 +6,19 @@
 	android:layout_height="fill_parent"
 	android:orientation="vertical"
 	tools:context=".activities.MapsActivity">
-	<fragment xmlns:android="http://schemas.android.com/apk/res/android"
-		xmlns:tools="http://schemas.android.com/tools"
-		android:id="@+id/map"
-		android:layout_width="match_parent"
-		android:layout_height="0dp"
-		android:layout_weight="0.9"
-		android:name="com.google.android.gms.maps.MapFragment"
-		tools:layout="@layout/abc_search_view"/>
+	<view
+		 android:layout_width="wrap_content"
+		 android:layout_height="0dp"
+		 android:layout_weight="0.9"
+		 class="com.google.android.gms.maps.MapView"
+		 android:id="@+id/map"
+		 android:layout_gravity="center_horizontal"/>
+
 	<Button
 		 android:layout_width="match_parent"
 		 android:layout_height="0dp"
 		 android:layout_weight="0.1"
-		 android:text="New Button"
+		 android:text="@string/button_place_node"
 		 style="@style/ButtonStyle"
 		 android:id="@+id/button"
 		 android:layout_gravity="bottom"/>
